2014-06-14  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/sysv/linux/m68k/pt-vfork.c: New file.
	* sysdeps/unix/sysv/linux/m68k/nptl/pt-vfork.S: Remove file.
	* sysdeps/unix/sysv/linux/m68k/vfork.S: Include <tcb-offsets.h>.
	(__vfork): Incorporate save/restore of PID from nptl/vfork.S here.
	(__libc_vfork): New strong alias.
	* sysdeps/unix/sysv/linux/m68k/nptl/vfork.S: Remove file.

2014-06-14 Andi Kleen  <ak@linux.intel.com>

	* sysdeps/generic/elide.h: New file.

2014-06-13  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* Makefile (installed-headers): Adjust path of pthread.h header.

2014-06-13  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h: Moved ...
	* sysdeps/s390/nptl/bits/pthreadtypes.h: ... here.
	* nptl/sysdeps/unix/sysv/linux/s390/bits/semaphore.h: Moved ...
	* sysdeps/s390/nptl/bits/semaphore.h: ... here.

	* nptl/sysdeps/s390/Makefile: Moved ...
	* sysdeps/s390/nptl/Makefile: ... here.
	* nptl/sysdeps/s390/pthread_spin_init.c: Moved ...
	* sysdeps/s390/nptl/pthread_spin_init.c: ... here.
	* nptl/sysdeps/s390/pthread_spin_lock.c: Moved ...
	* sysdeps/s390/nptl/pthread_spin_lock.c: ... here.
	* nptl/sysdeps/s390/pthread_spin_trylock.c: Moved ...
	* sysdeps/s390/nptl/pthread_spin_trylock.c: ... here.
	* nptl/sysdeps/s390/pthread_spin_unlock.c: Moved ...
	* sysdeps/s390/nptl/pthread_spin_unlock.c: ... here.
	* nptl/sysdeps/s390/pthreaddef.h: Moved ...
	* sysdeps/s390/nptl/pthreaddef.h: ... here.
	* nptl/sysdeps/s390/tcb-offsets.sym: Moved ...
	* sysdeps/s390/nptl/tcb-offsets.sym: ... here.
	* nptl/sysdeps/s390/tls.h: Moved ...
	* sysdeps/s390/nptl/tls.h: ... here.

	* sysdeps/unix/sysv/linux/s390/arch-fork.h: New file.
	* nptl/sysdeps/unix/sysv/linux/s390/fork.c: File removed.

2014-06-13  David S. Miller  <davem@davemloft.net>

	* nptl/sysdeps/unix/sysv/linux/sparc/sparc32/clone.S: Delete.
	* nptl/sysdeps/unix/sysv/linux/sparc/sparc32/pt-vfork.S: Delete.