@@ -1,2 +1,0 @@
-#define RESET_PID
-#include "../clone.S"
